--- a/lib/Form/Diva.pod
+++ b/lib/Form/Diva.pod
@@ -7,7 +7,7 @@ Form::Diva - Generate HTML5 form label and input fields
 
 =head1 VERSION
 
-version 0.08
+version 0.09
 
 =head1 SYNOPSIS
 
@@ -19,7 +19,7 @@ Drastically reduce form clutter in your View Templates with small Data Structure
 
 =head1 PROJECT STATUS IS BETA
 
-Most of Form::Diva is unlikely to change, but hasn't been road-tested enough to know for sure that mistakes haven't been made, either in the code or in interpretation of HTML5 standards. It is also possible that there are html5 elements that should be baked in rather than left for the 'extra' field. Every time I think I'm done and start trying to do work I still discover things that are needed.
+Most of Form::Diva is unlikely to change, but hasn't been road-tested enough to know for sure. While you are encouraged to start using Form::Diva, please be aware that there is a small possibility of changes that break compatibility.
 
 =head1 DESCRIPTION
 
@@ -118,6 +118,25 @@ Array refs of the names of fields in your form. This will let you re-order field
 =head4 input_class, label_class
 
 Change these values for your copy.
+
+=head2 datavalues
+
+Returns the data that would be used by generate as an array_ref of hashrefs for: name, type, label, and value. This applies only to visible fields, if you want hidden fields you'll need to clone the object and make them visible.
+
+There are two optional parameters: 'moredata' and 'skipempty'.
+
+skipempty suppresses returning fields with no data. Without data skipempty returns an empty array_ref, this might become an exception in the future.
+
+moredata returns all internal data defined for each row including placeholder and default which are meaningless when there is data.
+When these parameters are used without data it is necessary to pass undef in place of data. 
+
+  my $datavalues = $diva->datavalues( undef, 'moredata');
+  say $datavalues->[2]{name};
+
+  my $dv = $diva->datavalues( { user => 'me', password = 'secret' } );
+  foreach my $row ( @{$dv} ) { say "$row->{name} = $row->{value}" }
+    output : user = me
+             password = secret
 
 =head1 The Form::Diva Data Structure
 
@@ -224,11 +243,17 @@ Form::Diva doesn't do a huge amount of Error Checking or validation, but it does
 
 =head2 Why Doesn't Form::Diva generate an entire form?
 
-Form::Diva is intented to be used with Templating systems, the HTML generation is best left to the templating system. Telling form diva what you need in the Form Tag and whether you prefer to use a submit input or a button and what goes in them is only going to make it more complex, and make your application less readable because you will have replaced HTML with abstract perl code but not saved any space or labor. If you don't agree there are plenty of other Form Modules on CPAN that try to generate the whole form. 
+Form::Diva is intented to be used with Templating systems, the HTML generation is best left to the templating system. Telling form diva what you need in the Form Tag and whether you prefer to use a submit input or a button instead and what goes in them is only going to make it more complex, and make your application less readable because you will have replaced HTML with abstract perl code but not saved any space or labor. If you really want to generate your whole form in Perl, there are plenty of other Form Modules on CPAN. 
 
 =head2 Where do I use Form::Diva? in my Model, View or Controller?
 
-Wherever works best for you. Think of it as preparing your data for the View.
+Wherever works best for you. Think of it as preparing your data for the View. 
+
+=head1 SEE ALSO
+
+Here are a few other Form Modules on CPAN: HTML::Form::Fu, Form::Sensible, Form::Factory, Form::Toolkit
+
+Form::Diva is meant to be used with a Templating System. Template::Toolkit is the default templating system for Catalyst and Dancer. Template::Alloy is a drop in replacement for TemplateToolkit. Mojo::Template is a Perl reimplemenation of ERB and the default for Mojolicious.
 
 =head1 AUTHOR
 
