--- a/lib/Form/Diva.pod
+++ b/lib/Form/Diva.pod
@@ -13,7 +13,7 @@ Form::Diva - Generate HTML5 form label and input fields
 
 =head1 VERSION
 
-version 0.15
+version 0.16
 
 =head1 DESCRIPTION
 
@@ -93,6 +93,10 @@ The data returned is in the form of an array reference where each element of the
 Generate the hidden fields in the data structure. The generated hidden tags are returned as a singular block of text since no formatting is applicable and they just need to be included somewhere in the form. 
 
   $c->stash( hidden => $diva->hidden( $data_hashref ) );
+
+=head2 prefill
+
+not yet written
 
 =head2 clone
 
